frontend/test/should_pass/reuse_005.grg
rule r {
	x: Node;
	y: Node;
	x-e:Edge->y;

	replace {
		x; y;
		- e ->;
	}
}


