frontend/test/should_fail/edge_004.grg
rule r {
	replace {
		x:Node ?-e:AEdge-? y:Node;
	}
}
